2008-03-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by NOBODY.
        
        SquirrelFish lives.
        
        Initial check-in of the code I've been carrying around. Lots of stuff
        doesn't work. Plus a bunch of empty files.

2008-04-17  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by mrowe.

        * wtf/Platform.h: Add HAVE_ACCESSIBILITY to Platform.h.

2008-04-17  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        Thread static data destructors are not guaranteed to be called in any particular order;
        turn ThreadSpecific into a phoenix-style singleton to avoid accessing freed memory when
        deleted objects are interdependent (e.g. CommonIdentifiers and internal identifier tables).

        No change on SunSpider.

        * wtf/ThreadSpecific.h:
        (WTF::ThreadSpecific::Data::Data):
        (WTF::::get):
        (WTF::::set):
        (WTF::::destroy):

2008-04-15  Srinivas Rao. M Hamse  <msrinirao@gmail.com>

        Reviewed by Maciej Stachowiak.

        - gcc 3.x build fix

        * kjs/nodes.h: CallerType definition made public for gcc 3.x compilation

2008-04-16  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig

        Change ThreadSafeShared to act like RefCounted by starting out with a single ref by default

        * wtf/Threading.h:
        (WTF::ThreadSafeShared::ThreadSafeShared):

2008-04-16  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoffrey Garen.

        - To keep the behavior of the WebKit and JavaScriptCore API's the same,
          we need to hide the fact that the global object and the window object
          are no longer the same thing, and the the global object now changes on
          navigations.  To do this, only the wrapper should ever be exposed.  This
          fixes the two remaining spots where the internal global object is exposed,
          the windowScriptObject returned from [WebFrame windowObject] and the object